fixed image bug on mobile

--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -297,12 +297,6 @@ pre {
   align-items: center;
 }
 
-img.cover {
-  width: 100%;
-  max-height: 50vh;
-  object-fit: cover;
-}
-
 blockquote {
   font-size: 1.5rem;
   --padding-block: 1rem;
@@ -480,7 +474,7 @@ h1 a {
 
 .hero-image {
   width: 100vw;
-  object-fit: cover;
+  object-fit: scale-down;
   object-position: center;
   margin-top: 2rem;
   margin-bottom: 4rem;
